--- a/personal_website/static/css/styles.css
+++ b/personal_website/static/css/styles.css
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 div.jumbotron{
   min-height:100vh;
-  background:url("../img/test-bg.jpg") no-repeat center;
+  background:url(../img/test-bg.jpg) no-repeat center;
   background-size:cover;
   margin-bottom:0;
 }
@@ -42,12 +42,21 @@ h1#main-page-heading.text-right{
   margin-top:80px;
 }
 
+@media (max-width:400px) {
+  .mt80{
+    margin-top:20px;
+  }
+}
+
 p.text-justify.main-page-color.mt20{
   font-size:1.4em;
 }
 
 h2.main-page-color{
   color:#9fd356;
+  font-weight:100;
+  font-size:1.8em;
+  font-family:'Assistant', sans-serif;
 }
 
 @media (max-width:600px) and (min-width:350px) {
@@ -134,6 +143,7 @@ a{
   color:#9fd356;
   border-bottom:1px solid transparent;
   font-size:1.2em;
+  font-family:'Alegreya Sans', sans-serif;
 }
 
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:focus, .navbar-inverse .navbar-nav > .active > a:hover{
@@ -154,20 +164,14 @@ li{
   border-bottom:1px solid white;
 }
 
-@media (max-width:385px) {
-  h1#main-page-heading.text-center.main-page-color{
-    font-size:3.5em;
+@media (min-height:875px) {
+  #main-page-heading{
+    font-size:7em;
   }
 }
 
-@media (max-width:600px) and (min-width:386px) {
-  h1#main-page-heading.text-center.main-page-color{
-    font-size:4em;
-  }
-}
-
-@media (min-height:900px) {
-  h1#main-page-heading.text-center.main-page-color{
+@media (max-width:400px) {
+  #main-page-heading{
     font-size:5em;
   }
 }
@@ -194,7 +198,11 @@ li{
 }
 
 button.main-page-button{
-  width:80%;
+  width:70%;
+  background:transparent;
+  border:1px solid white;
+  font-family:'Alegreya Sans', sans-serif;
+  border-radius:24px;
 }
 
 @media (max-width:991px) {
@@ -210,6 +218,33 @@ body{
 @media (max-width:991px) {
   #project-button{
     margin-bottom:15px;
+  }
+}
+
+h1{
+  font-size:7em;
+  font-weight:200;
+  font-family:'Alegreya Sans', sans-serif;
+}
+
+.main-row{
+  position:relative;
+  top:50%;
+}
+
+div.container{
+  margin-top:15vh;
+}
+
+@media (min-height:875px) {
+  div.container{
+    margin-top:25vh;
+  }
+}
+
+@media (max-width:400px) {
+  div.container{
+    margin-top:5vh;
   }
 }
 
