--- a/personal_website/templates/index.html
+++ b/personal_website/templates/index.html
@@ -8,6 +8,8 @@
     <title>landing</title>
     <link rel="stylesheet" href={% static "bootstrap/css/bootstrap.min.css" %}>
     <link rel="stylesheet" href={% static "css/styles.css" %}>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans:700|Assistant:300">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:300|Roboto+Mono">
 </head>
 
 <body>
@@ -29,7 +31,7 @@
             </div>
         </nav>
         <div class="container">
-            <div class="row mt60">
+            <div class="row main-row">
                 <div class="col-md-12">
                     <h1 class="text-center main-page-color" id="main-page-heading">Akshat Gupta</h1></div>
             </div>
@@ -37,17 +39,11 @@
                 <div class="col-md-12">
                     <h2 class="text-center main-page-color">Back-End Specialist | Full Stack Developer | Coder</h2></div>
             </div>
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2 col-xs-12">
-                    <p class="text-center main-page-color mt20">Hello Visitor! I am a fourth year B-Tech student in Computer Science, and this is my personal website. Currently I am looking for a good work opportunity and am available to work full time. Please feel free to explore this website
-                        to know more about me. Looking forward to work with you.</p>
-                </div>
-            </div>
             <div class="row mt40">
-                <div class="col-md-4 col-md-offset-2 text-center">
+                <div class="col-md-3 col-md-offset-3 text-center">
                     <button class="btn btn-primary btn-lg main-page-button" type="button" id="project-button">Resume </button>
                 </div>
-                <div class="col-md-4 text-center">
+                <div class="col-md-3 text-center">
                     <button class="btn btn-primary btn-lg text-center main-page-button" type="button">Projects </button>
                 </div>
             </div>
