--- a/personal_website/templates/index.html
+++ b/personal_website/templates/index.html
@@ -49,8 +49,8 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src={% static "js/jquery.min.js" %}></script>
+    <script src={% static "bootstrap/js/bootstrap.min.js" %}></script>
 </body>
 
 </html>
