--- a/personal_website/templates/projects.html
+++ b/personal_website/templates/projects.html
@@ -1,14 +1,22 @@
-{% load staticfiles%}
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Untitled</title>
+    <title>Projects</title>
     <link rel="stylesheet" href={% static "bootstrap/css/bootstrap.min.css" %}>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=ABeeZee">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abhaya+Libre">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Antic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
-    <link rel="stylesheet" href={% static "css/Header-Dark.css" %}>
     <link rel="stylesheet" href={% static "css/projects.css" %}>
 </head>
 
@@ -17,30 +25,32 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1 class="text-center">Projects</h1>
+                    <h1 class="text-center" style="font-family:'Alfa Slab One', cursive;font-size:40px;">Projects</h1>
                 </div>
             </div>
-            <div class="row mt20">
+            <div class="row mt10">
                 <div class="col">
-                    <h4 class="text-center">These are some of the projects that I did.</h4>
+                    <h2 class="text-center" style="font-family:'Abhaya Libre', serif;font-size:28px;">These are some of the projects that I did.</h2>
                 </div>
             </div>
             <div class="row mt20">
-                {% for project in projects_data%}
-                    <div class="col-10 col-sm-10 col-lg-6 offset-1 offset-sm-1 offset-lg-0">
-                        <div class="card">
-                            <div class="card-body">
-                                <h4 class="card-title">{{project.name}}</h4>
-                                <h6 class="text-muted card-subtitle mb-2 mt20">Technologies Used</h6>
-                                <ul class="d-flex justify-content-start align-items-center align-content-start flex-wrap">
-                                    {% for technology in project.technology %}
-                                        <li>{{ technology.name }}</li>
-                                    {% endfor %}
-                                </ul>
-                                <p class="card-text">{{project.summary}}</p><a class="card-link" href="#">Read More</a></div>
+                <div class="col-12 col-sm-12 col-lg-10 offset-0 offset-sm-0 offset-lg-1">
+                    {% for project in projects_data %}
+                    <div class="card mt20 shadow bg-white rounded">
+                        <div class="card-body">
+                            <h3 class="text-center card-title" style="font-family:'Alegreya Sans SC', sans-serif;font-size:36px;">{{project.name}}</h3>
+                            <h6 class="text-center card-subtitle mb-2 mt20">Technologies Used</h6>
+                            <ul class="d-flex justify-content-center align-items-center align-content-start flex-wrap">
+                                {% for technology in project.technology %}
+                                <li>{{technology.name}}</li>
+                                {% endfor%}
+                            </ul>
+                            <p class="text-center card-text">{{project.summary}}</p>
+                            <div class="d-flex justify-content-center align-items-center"><a href={% url 'Single-Project-Home' project.id %} class="card-link">Read More</a></div>
                         </div>
                     </div>
-                {% endfor%}
+                    {% endfor %}
+                </div>
             </div>
         </div>
     </div>
