--- a/personal_website/templates/projects.html
+++ b/personal_website/templates/projects.html
@@ -19,9 +19,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href={% static "css/projects.css" %}>
 </head>
-
 <body>
     <div class="jumbotron">
+    {% include "navbar.html" %}
         <div class="container">
             <div class="row">
                 <div class="col">
