--- a/personal_website/templates/navbar.html
+++ b/personal_website/templates/navbar.html
@@ -17,9 +17,9 @@
             <div class="collapse navbar-collapse float-right"
                 id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href={% url 'Home' %}>Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">About Me</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Projects</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href={% url 'Projects:Home' %}>Projects</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">Resume</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">Contact</a></li>
                 </ul>
