--- a/personal_website/templates/projects.html
+++ b/personal_website/templates/projects.html
@@ -30,7 +30,7 @@
             </div>
             <div class="row mt10">
                 <div class="col">
-                    <h2 class="text-center" style="font-family:'Abhaya Libre', serif;font-size:28px;">These are some of the projects that I did.</h2>
+                    <h2 class="text-center" style="font-family:'Abhaya Libre', serif;font-size:28px;">These are some of the projects that I have made</h2>
                 </div>
             </div>
             <div class="row mt20">
