--- a/personal_website/templates/index.html
+++ b/personal_website/templates/index.html
@@ -32,15 +32,15 @@
             <div class="row mt10">
                 <div class="col-lg-8 offset-lg-2">
                     <div class="row">
-                        <div class="col-12 col-lg-4 offset-lg-0" id="designation-1">
+                        <div class="col-12 col-lg-5 offset-lg-1" id="designation-1">
                             <p class="text-center">Software Developer</p>
                         </div>
-                        <div class="col-12 col-lg-4" id="designation-2">
+                        <div class="col-12 col-lg-5" id="designation-2">
                             <p class="text-center">Back-End Developer</p>
                         </div>
-                        <div class="col-lg-4" id="designation-3">
+                        <!-- <div class="col-lg-4" id="designation-3">
                             <p class="text-center">Full-Stack Developer</p>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
